force-app/main/default/objects/Atlas_Setting__mdt/Atlas_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Atlas Setting</label>
    <pluralLabel>Atlas Settings</pluralLabel>
</CustomObject>