force-app/main/default/objects/Atlas_Setting__mdt/fields/Callout_Timeout_Ms__c.field-meta.xml
<CustomField>
    <fullName>Callout_Timeout_Ms__c</fullName>
    <label>Callout Timeout (ms)</label>
    <precision>6</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>