force-app/main/default/objects/Atlas_Setting__mdt/fields/Max_Callout_Attempts__c.field-meta.xml
<CustomField>
    <fullName>Max_Callout_Attempts__c</fullName>
    <label>Max Callout Attempts</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>