force-app/main/default/objects/Atlas_Setting__mdt/fields/NPS_Window_Days__c.field-meta.xml
<CustomField>
    <fullName>NPS_Window_Days__c</fullName>
    <label>NPS Window (days)</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>