force-app/main/default/objects/Atlas_Setting__mdt/fields/Snapshot_Retention_Months__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Retention_Months__c</fullName>
    <label>Snapshot Retention (months)</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>